--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui">
    
     <h:head>
-        <title>Resolucion 3374</title>
+        <title>ResolucioN 3374</title>
     </h:head>
     <h:body>
       
